# projetcpp2526-s2-2a14-Waste-Collection-and-Recycling-management

./: .gitignore  CMakeLists.txt  Dashboard.cpp  Dashboard.h  GestionCamions.cpp  GestionCamions.h  GestionPoubelles.cpp  GestionPoubelles.h  RECYCLAGE.cpp  RECYCLAGE.h  auto_push_v2.bat  camion.cpp  camion.h  chatbot.cpp  chatbot.h  connection.cpp  connection.h  database.cpp  database.h  gestion_des_poubelles.cpp  gestion_des_poubelles.h  gestion_des_poubelles.ui  gestionzones.cpp  gestionzones.h  gestzones.pro  magee.html  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  otpmanager.cpp  otpmanager.h  poubelle.cpp  poubelle.h  push_to_github.bat  resources.qrc  temp_poubeilles_mw.cpp  temp_poubeilles_mw.h  tuniwaste.pro  tuniwaste.sql  (+3 more)
magee_files/: TokenFactoryIframe.html  livepersonacard_without-react_8364128ec5ef221fca5e.js.téléchargement  livepersonacardstrings_5391def92898629e8367a3c9f2bfa3066e7f0284.js.téléchargement  me  owa.calendar.m.32edee34.css  owa.mail.m.ee079242.css  owa.mail.runtime.4c8f394b.js.téléchargement  owa.mailindex.43c39209.js.téléchargement  owa.shared.m.0395428f.css  owa.styles.m.a5407b02.css
